# missioneditor2

./: .gitignore  Cargo.toml  Dioxus.toml  expected.txt  found.txt  input.css  package-lock.json  package.json  tailwind.config.js
public/: custom.css  tailwind.css
src/: main.rs  tea.rs  utils.rs
src/components/: filepicker.rs  mod.rs  picker.rs  rightpanel.rs  selector.rs  viewport.rs
src/playmission/: datafile.rs  error.rs  filemap.rs  mod.rs  playmission.rs  xmlcleaner.rs
src/playmission/structs/: active_prop.rs  character.rs  door.rs  error.rs  location.rs  media.rs  mission.rs  missionobject.rs  mod.rs  pickup.rs  player.rs  prop.rs  properties.rs  rule.rs  traits.rs  (+3 more)
src/three/: boxgeometry.rs  color.rs  euler.rs  imageloader.rs  mesh.rs  meshbasicmaterial.rs  mod.rs  object3d.rs  orbitcontrols.rs  perspectivecamera.rs  picker.rs  raycaster.rs  scene.rs  vector2.rs  vector3.rs  webglrenderer.rs
test_data/: cleaner_clean.txt  cleaner_dirty.txt  datafile_datafile.txt  datafile_default.txt  missionserde_mission.txt  missionserde_properties.txt
test_data/props/: Default.prop  Test.mission  barrier_bars.prop  mg_bookcase.prop
test_data/testcase/: BARONIAL_2DOOR_OUT_Lights Off!_lmap0.tga  BARONIAL_2DOOR_OUT_Lights Off!_lmap1.tga  BARONIAL_2DOOR_OUT_Lights Off!_lmap2.tga  BARONIAL_2DOOR_OUT_Lights On!_lmap0.tga  BARONIAL_2DOOR_OUT_Lights On!_lmap1.tga  BARONIAL_2DOOR_OUT_Lights On!_lmap2.tga  BARONIAL_3DOOR_Lights Off!_lmap0.tga  BARONIAL_3DOOR_Lights Off!_lmap1.tga  BARONIAL_3DOOR_Lights Off!_lmap2.tga  BARONIAL_3DOOR_Lights Off!_lmap3.tga  BARONIAL_3DOOR_Lights On!_lmap0.tga  BARONIAL_3DOOR_Lights On!_lmap1.tga  BARONIAL_3DOOR_Lights On!_lmap2.tga  BARONIAL_3DOOR_Lights On!_lmap3.tga  Default.aprop  Default.asc  Default.prop  Default.tile  FacingMarker.tga  Industrial.tga  Playericon.tga  Speech_base.tga  Test.mission  baronial_2door_out.tile  baronial_3door.tile  blank_base.tga  cablehook.tga  cam_base.tga  cam_notes_base.tga  compass_base.tga  compass_point.tga  cursor_cangrab.tga  cursor_closedhand.tga  cursor_mouth.tga  cursor_openhand.tga  cursor_too_heavy.tga  cursor_zoom.tga  etelevision.aprop  examin_base.tga  examin_dep.tga  (+31 more)
(+3 files in other folders)
