[package]
name = "missioneditor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
regex = "1.10.3"
serde = "1.0.197"
thiserror = "1.0.57"

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize", "serde-types"]