[package]
name = "missioneditor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
fancy-regex = "0.13.0"
serde = "1.0.197"
thiserror = "1.0.57"
lazy_static = "1.4.0"

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize", "serde-types"]