[package]
name = "missioneditor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dioxus = { version = "0.5.0-alpha.0", features = ["web"] }
fancy-regex = "0.13.0"
serde = "1.0.197"
thiserror = "1.0.57"
lazy_static = "1.4.0"
erased-serde = "0.4.4"
wasm-bindgen = "0.2.92"
gloo-console = "0.3.0"
js-sys = "0.3.69"
gloo-timers = "0.3.0"
getrandom = { version = "0.2.12", features = ["js"] }
gloo-file = "0.3.0"

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize", "serde-types"]

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Blob',
  'BlobPropertyBag',
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'MouseEvent',
  'Url',
  'Window'
]

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
